--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.astrainteractive</groupId>
-    <artifactId>AstraLibs</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <artifactId>astralibs</artifactId>
+    <version>1.0.5</version>
+    <packaging>jar</packaging>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Asrta-Interactive Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Asrta-Interactive/astralibs</url>
+        </repository>
+    </distributionManagement>
+
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
@@ -57,6 +67,15 @@
                 </executions>
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
         </plugins>
