--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 
     <groupId>com.astrainteractive</groupId>
     <artifactId>astralibs</artifactId>
-    <version>1.0.12-1</version>
+    <version>1.0.22</version>
     <packaging>jar</packaging>
 
     <distributionManagement>
         <repository>
             <id>github</id>
             <name>GitHub Asrta-Interactive Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/Asrta-Interactive/astralibs</url>
+            <url>https://maven.pkg.github.com/asrta-interactive/astralibs</url>
         </repository>
     </distributionManagement>
 
@@ -106,16 +106,22 @@
     <dependencies>
         <!--        Paper-->
         <dependency>
-            <groupId>io.papermc.paper</groupId>
-            <artifactId>paper-api</artifactId>
-            <version>1.17.1-R0.1-SNAPSHOT</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.18-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <!--        Spigot-->
         <dependency>
             <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.18-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.17.1-R0.1-SNAPSHOT</version>
+            <version>1.18-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
