--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 
     <groupId>com.astrainteractive</groupId>
     <artifactId>astralibs</artifactId>
-    <version>1.0.22</version>
+    <version>1.0.27</version>
     <packaging>jar</packaging>
 
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub Asrta-Interactive Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/asrta-interactive/astralibs</url>
+            <name>GitHub Astra-Interactive Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Astra-Interactive/AstraLibs</url>
         </repository>
     </distributionManagement>
 
