--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-plugin = "2.0.16-4"
+plugin = "2.0.17"
 name = "AstraLibs"
 group =  "ru.astrainteractive.astralibs"
 description = "Core utilities for spigot development"
