--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-plugin = "2.2.1"
+plugin = "2.2.3"
 name = "AstraLibs"
 group =  "ru.astrainteractive.astralibs"
 description = "Core utilities for spigot development"
@@ -9,8 +9,8 @@ destinationDirectoryPath = "D:\\Minecraft Servers\\EmpireProjekt_remake\\smp\\pl
 kotlin = "1.7.0"
 jetbrainsCompose = "1.2.0"
 coroutines = "1.6.3"
-json = "1.3.3"
-kaml = "0.46.0"
+json = "1.5.0-RC"
+kaml = "0.50.0"
 exposed = "0.38.1"
 jdbc = "3.36.0.3"
 astraLibs = "2.0.16-4"
