--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,90 +1,100 @@
 [versions]
-plugin = "2.5.0-RC1"
-name = "AstraLibs"
-group =  "ru.astrainteractive.astralibs"
-description = "Core utilities for spigot development"
-wear-gms = "18.0.0"
-destinationDirectoryPath = "D:\\Minecraft Servers\\Servers\\esmp-configuration\\smp\\plugins"
+plugin-version = "2.5.0-RC1"
+plugin-name = "AstraLibs"
+plugin-group = "ru.astrainteractive.astralibs"
+plugin-description = "Core utilities for spigot development"
+destionation-spigot = "D:\\Minecraft Servers\\Servers\\esmp-configuration\\smp\\plugins"
+
 # Kotlin
-kotlin = "1.8.10"
-jetbrainsCompose = "1.2.0"
-coroutines = "1.6.3"
-json = "1.5.0-RC"
-kaml = "0.50.0"
+kotlin-version = "1.8.10"
+kotlin-coroutines = "1.6.3"
+kotlin-json = "1.5.0-RC"
+kotlin-kaml = "0.50.0"
+
+# Exposed
 exposed = "0.38.1"
-jdbc = "3.36.0.3"
-astraLibs = "2.0.16-4"
+
+# Drivers
+driver-jdbc = "3.36.0.3"
+driver-mysql = "8.0.20"
+
+# Dependencues
+astralibs = "2.0.16-4"
+
+# Shadow
 shadow = "7.1.2"
-mysqlDriver = "8.0.20"
-orgTesting = "7.1.0"
-# Spigot
-velocity = "3.1.1"
-spigot = "1.19.3-R0.1-SNAPSHOT"
-placeholderAPI = "2.11.2"
-protocolLib = "4.8.0"
-worldGuard = "7.0.7"
-vault = "1.7"
-coreProtect = "21.2"
-modelEngine = "R3.0.0"
-essentials = "2.19.5-SNAPSHOT"
-discordSRV = "1.25.0"
-luckPerms = "5.4"
-bstats = "3.0.0"
+
+# Minecraft
+minecraft-velocity = "3.1.1"
+minecraft-spigot = "1.19.3-R0.1-SNAPSHOT"
+minecraft-papi = "2.11.2"
+minecraft-protocollib = "4.8.0"
+minecraft-wg = "7.0.7"
+minecraft-vault = "1.7"
+minecraft-coreprotect = "21.2"
+
 # Testing
-junit = "4.12"
-mockito = "4.0.0"
-roboelectric = "4.9"
-mockk = "1.13.2"
-arkivanov-decompose = "1.0.0-alpha-06"
-orbitMvi = "4.5.0"
-junit-jupiterApi = "5.9.1"
-junit-bom = "5.7.0"
+tests-org-testing = "7.1.0"
+tests-junit = "4.12"
+tests-mockito = "4.0.0"
+tests-junit-jupiter-api = "5.9.1"
+tests-junit-bom = "5.7.0"
+
 [libraries]
-# Gradle - Core
+# Shadow
 shadow = { module = "gradle.plugin.com.github.johnrengelman:shadow", version.ref = "shadow" }
-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
-coroutines-coreJvm = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm", version.ref = "coroutines" }
-kotlin-serialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
-kotlin-serializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "json" }
-kotlin-serializationKaml = { module = "com.charleskorn.kaml:kaml", version.ref = "kaml" }
-kotlin-dokka-kotlinJavaPlugin = { module = "org.jetbrains.dokka:kotlin-as-java-plugin", version.ref = "kotlin" }
-kotlin-dokka-plugin = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "kotlin" }
-astralibs-ktxCore = { module = "ru.astrainteractive.astralibs:ktx-core", version.ref = "astraLibs" }
-astralibs-spigotCore = { module = "ru.astrainteractive.astralibs:spigot-core", version.ref = "astraLibs" }
-xerial-sqlite-jdbc = { module = "org.xerial:sqlite-jdbc", version.ref = "jdbc" }
-junit-jupiterApi = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit-jupiterApi" }
-junit-bom = { module = "org.junit:junit-bom", version.ref = "junit-bom" }
-io-kotlintest-junitRunner = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit-jupiterApi" }
+
+# Kotlin
+kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin-coroutines" }
+kotlin-coroutines-coreJvm = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm", version.ref = "kotlin-coroutines" }
+kotlin-serialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin-version" }
+kotlin-serializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-json" }
+kotlin-serializationKaml = { module = "com.charleskorn.kaml:kaml", version.ref = "kotlin-kaml" }
+kotlin-dokka-kotlinJavaPlugin = { module = "org.jetbrains.dokka:kotlin-as-java-plugin", version.ref = "kotlin-version" }
+kotlin-dokka-plugin = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "kotlin-version" }
+kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-version" }
+
+# AstraLibs
+astralibs-ktxCore = { module = "ru.astrainteractive.astralibs:ktx-core", version.ref = "astralibs" }
+astralibs-spigotCore = { module = "ru.astrainteractive.astralibs:spigot-core", version.ref = "astralibs" }
+
+# Drivers
+driver-jdbc = { module = "org.xerial:sqlite-jdbc", version.ref = "driver-jdbc" }
+driver-mysql = { module = "mysql:mysql-connector-java", version.ref = "driver-mysql" }
+
+# Testing
+tests-junit-bom = { module = "org.junit:junit-bom", version.ref = "tests-junit-bom" }
+tests-junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "tests-junit-jupiter-api" }
+tests-org-testing = { module = "org.testng:testng", version.ref = "tests-org-testing" }
+
+# Exposed
 exposed-java-time = { module = "org.jetbrains.exposed:exposed-java-time", version.ref = "exposed" }
 exposed-jdbc = { module = "org.jetbrains.exposed:exposed-jdbc", version.ref = "exposed" }
 exposed-dao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed" }
 exposed-core = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed" }
-mysql-connector-java = { module = "mysql:mysql-connector-java", version.ref = "mysqlDriver" }
-orgTesting = { module = "org.testng:testng", version.ref = "orgTesting" }
-essentialsx = { module = "net.essentialsx:EssentialsX", version.ref = "essentials" }
-paperApi = { module = "io.papermc.paper:paper-api", version.ref = "spigot" }
-spigotApi = { module = "org.spigotmc:spigot-api", version.ref = "spigot" }
-spigot = { module = "org.spigotmc:spigot", version.ref = "spigot" }
-velocity-api = { module = "com.velocitypowered:velocity-api", version.ref = "velocity" }
-protocollib = { module = "com.comphenix.protocol:ProtocolLib", version.ref = "protocolLib" }
-placeholderapi = { module = "me.clip:placeholderapi", version.ref = "placeholderAPI" }
-worldguard-bukkit = { module = "com.sk89q.worldguard:worldguard-bukkit", version.ref = "worldGuard" }
-discordsrv = { module = "com.discordsrv:discordsrv", version.ref = "discordSRV" }
-vaultapi = { module = "com.github.MilkBowl:VaultAPI", version.ref = "vault" }
-coreprotect = { module = "net.coreprotect:coreprotect", version.ref = "coreProtect" }
-modelengine = { module = "com.ticxo.modelengine:api", version.ref = "modelEngine" }
-bstats-bukkit = { module = "org.bstats:bstats-bukkit", version.ref = "bstats" }
-kotlinGradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-arkivanov-decompose-core = { module = "com.arkivanov.decompose:decompose", version.ref = "arkivanov-decompose" }
-arkivanov-decompose-compose-jetbrains = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "arkivanov-decompose" }
-orbitmvi-core = { module = "org.orbit-mvi:orbit-core", version.ref = "orbitMvi" }
-orbitmvi-viewModel = { module = "org.orbit-mvi:orbit-viewmodel", version.ref = "orbitMvi" }
-orbitmvi-compose = { module = "org.orbit-mvi:orbit-compose", version.ref = "orbitMvi" }
+
+
+
+# Minecraft
+minecraft-paper-api = { module = "io.papermc.paper:paper-api", version.ref = "minecraft-spigot" }
+minecraft-spigot-api = { module = "org.spigotmc:spigot-api", version.ref = "minecraft-spigot" }
+minecraft-spigot-core = { module = "org.spigotmc:spigot", version.ref = "minecraft-spigot" }
+minecraft-velocity-api = { module = "com.velocitypowered:velocity-api", version.ref = "minecraft-velocity" }
+minecraft-protocollib = { module = "com.comphenix.protocol:ProtocolLib", version.ref = "minecraft-protocollib" }
+minecraft-papi = { module = "me.clip:placeholderapi", version.ref = "minecraft-papi" }
+minecraft-vaultapi = { module = "com.github.MilkBowl:VaultAPI", version.ref = "minecraft-vault" }
+
+[bundles]
+exposed = ["exposed-java-time", "exposed-jdbc", "exposed-dao", "exposed-core"]
+minecraft-bukkit = ["minecraft-paper-api", "minecraft-spigot-api", "minecraft-spigot-core", "minecraft-vaultapi", "minecraft-papi"]
+testing-kotlin = ["kotlin-coroutines-core", "kotlin-coroutines-coreJvm", "driver-jdbc", "driver-mysql", "kotlin-serialization", "kotlin-serializationJson"]
+testing-libs = ["tests-junit-jupiter-api", "tests-org-testing"]
+kotlin = ["kotlin-coroutines-core", "kotlin-coroutines-coreJvm", "kotlin-serialization", "kotlin-serializationJson", "kotlin-serializationKaml", "kotlin-dokka-kotlinJavaPlugin", "kotlin-gradle"]
+
 [plugins]
-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-kotlin-compose = { id = "org.jetbrains.compose", version.ref = "jetbrainsCompose" }
-kotlin-gradle = { id = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
-kotlin-dokka = { id = "org.jetbrains.dokka", version.ref = "kotlin" }
-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin-version" }
+kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin-version" }
+kotlin-gradle = { id = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-version" }
+kotlin-dokka = { id = "org.jetbrains.dokka", version.ref = "kotlin-version" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin-version" }
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
