- Improved tests bundles

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -69,6 +69,8 @@ driver-mysql = { module = "mysql:mysql-connector-java", version.ref = "driver-my
 tests-junit-bom = { module = "org.junit:junit-bom", version.ref = "tests-junit-bom" }
 tests-junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "tests-junit-jupiter-api" }
 tests-org-testing = { module = "org.testng:testng", version.ref = "tests-org-testing" }
+tests-junit5 = { module = "org.jetbrains.kotlin:kotlin-test-junit5" }
+tests-junit-jupiter = { module = "org.junit.jupiter:junit-jupiter" }
 
 # Exposed
 exposed-java-time = { module = "org.jetbrains.exposed:exposed-java-time", version.ref = "exposed" }
@@ -91,7 +93,7 @@ minecraft-vaultapi = { module = "com.github.MilkBowl:VaultAPI", version.ref = "m
 exposed = ["exposed-java-time", "exposed-jdbc", "exposed-dao", "exposed-core"]
 minecraft-bukkit = ["minecraft-paper-api", "minecraft-spigot-api", "minecraft-spigot-core", "minecraft-vaultapi", "minecraft-papi"]
 testing-kotlin = ["kotlin-coroutines-core", "kotlin-coroutines-coreJvm", "driver-jdbc", "driver-mysql", "kotlin-serialization", "kotlin-serializationJson"]
-testing-libs = ["tests-junit-jupiter-api", "tests-org-testing"]
+testing-libs = ["tests-junit-jupiter-api", "tests-org-testing", "tests-junit5", "tests-junit-jupiter"]
 kotlin = ["kotlin-coroutines-core", "kotlin-coroutines-coreJvm", "kotlin-serialization", "kotlin-serializationJson", "kotlin-serializationKaml", "kotlin-dokka-kotlinJavaPlugin", "kotlin-gradle"]
 
 [plugins]
