--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-plugin-version = "2.7.0-RC8"
+plugin-version = "2.7.1"
 plugin-name = "AstraLibs"
 plugin-group = "ru.astrainteractive.astralibs"
 plugin-description = "Core utilities for spigot development"
