- Returned build-action version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Give gradle permission
         run: chmod +x gradlew
       - name: detekt
-        uses: gradle/gradle-build-action@2.4.2
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: detekt
   tests:
@@ -44,7 +44,7 @@ jobs:
       - name: Give gradle permission
         run: chmod +x gradlew
       - name: Run tests
-        uses: gradle/gradle-build-action@2.4.2
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: test
   publish:
