--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,54 +1,14 @@
 name: Publish release
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: [ tests, gradle-wrapper-validation, detekt-validation ]
+    branches: [ master ]
+    types:
+      - completed
 
 jobs:
-  validate_gradle:
-    name: Validate gradle
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Validate Gradle Wrapper
-        uses: gradle/wrapper-validation-action@v1
-  detekt:
-    needs: [ validate_gradle ]
-    name: "Check project by detekt"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 1.11
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-      - name: Give gradle permission
-        run: chmod +x gradlew
-      - name: detekt
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: detekt
-  tests:
-    needs: [ detekt ]
-    name: "Run tests"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 1.11
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-      - name: Give gradle permission
-        run: chmod +x gradlew
-      - name: Run tests
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: test
   publish:
-    needs: [ detekt, tests ]
     name: Publish library at mavenCentral
     runs-on: ubuntu-latest
     env:
