--- a/.github/workflows/detekt-validation.yml
+++ b/.github/workflows/detekt-validation.yml
@@ -1,6 +1,9 @@
 name: "detekt-validation"
-on: [ push, pull_request ]
-
+on:
+  workflow_run:
+    workflows: [ gradle-wrapper-validation ]
+    types:
+      - completed
 jobs:
   detekt:
     name: "Check project by detekt"
