- Fixed publication gradle script - Attempt to reusable workflows

--- a/.github/workflows/detekt-validation.yml
+++ b/.github/workflows/detekt-validation.yml
@@ -1,9 +1,6 @@
 name: "detekt-validation"
 on:
-  workflow_run:
-    workflows: [ gradle-wrapper-validation ]
-    types:
-      - completed
+  workflow_call:
 jobs:
   detekt:
     name: "Check project by detekt"
