--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,9 +8,16 @@ on:
       - completed
 
 jobs:
+  gradle_validation:
+    uses: ./.github/workflows/gradle-wrapper-validation.yml
+  detekt_validation:
+    uses: ./.github/workflows/detekt-validation.yml
+  tests_validation:
+    uses: ./.github/workflows/tests-validation.yml
   publish:
     name: Publish library at mavenCentral
     runs-on: ubuntu-latest
+    needs: [gradle_validation, detekt_validation, tests_validation]
     env:
       SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
       SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
