--- a/.github/workflows/tests-validation.yml
+++ b/.github/workflows/tests-validation.yml
@@ -1,9 +1,7 @@
 name: "tests"
 on:
-  workflow_run:
-    workflows: [ detekt-validation ]
-    types:
-      - completed
+  workflow_call:
+
 jobs:
   tests:
     name: "Run tests"
