--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,10 @@ jobs:
   gradle_validation:
     uses: ./.github/workflows/gradle-wrapper-validation.yml
   detekt_validation:
+    needs: gradle_validation
     uses: ./.github/workflows/detekt-validation.yml
   tests_validation:
+    needs: gradle_validation
     uses: ./.github/workflows/tests-validation.yml
   publish:
     name: Publish library at mavenCentral
