--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,12 @@
 [versions]
-plugin-version = "2.7.1"
-plugin-name = "AstraLibs"
-plugin-group = "ru.astrainteractive.astralibs"
-plugin-description = "Core utilities for spigot development"
-plugin-url = "AstraInteractive.ru"
-plugin-authors = "Roman Makeev"
-plugin-author = "Roman Makeev"
+# Project
+project-version = "2.7.2"
+project-name = "AstraLibs"
+project-group = "ru.astrainteractive.astralibs"
+project-description = "Core utilities for spigot development"
+project-url = "AstraInteractive.ru"
+project-authors = "Roman Makeev"
+project-author = "Roman Makeev"
 destionation-spigot = "D:\\Minecraft Servers\\Servers\\esmp-configuration\\smp\\plugins"
 
 # Kotlin
