feat: implemented shared gradle plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,19 @@
 kotlin.code.style=official
 testTask.ignoreFailures = true
+# Java
+makeevrserg.java.source=8
+makeevrserg.java.target=17
+makeevrserg.java.ktarget=17
+# Project
+makeevrserg.project.name=AstraLibs
+makeevrserg.project.group=ru.astrainteractive.astralibs
+makeevrserg.project.version.string=2.7.4
+makeevrserg.project.description=Core utilities for spigot development
+# Publish
+makeevrserg.publish.name=AstraLibs
+makeevrserg.publish.groupId=ru.astrainteractive.astralibs
+makeevrserg.publish.description=Core utilities for spigot development
+makeevrserg.publish.repo.org=Astra-Interactive
+makeevrserg.publish.repo.name=AstraLibs
+makeevrserg.publish.license=Custom
+makeevrserg.publish.developers=makeevrserg|Makeev Roman|makeevrserg@gmail.com
