--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
-testTask.ignoreFailures = true
+testTask.ignoreFailures=true
 # Java
 makeevrserg.java.source=8
 makeevrserg.java.target=17
@@ -9,6 +9,8 @@ makeevrserg.project.name=AstraLibs
 makeevrserg.project.group=ru.astrainteractive.astralibs
 makeevrserg.project.version.string=2.7.4
 makeevrserg.project.description=Core utilities for spigot development
+makeevrserg.project.developers=makeevrserg|Makeev Roman|makeevrserg@gmail.com
+makeevrserg.project.url=https://empireprojekt.ru
 # Publish
 makeevrserg.publish.name=AstraLibs
 makeevrserg.publish.groupId=ru.astrainteractive.astralibs
