--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,10 +14,11 @@ jobs:
   tests_validation:
     needs: gradle_validation
     uses: ./.github/workflows/tests-validation.yml
+
   publish:
     name: Publish library at mavenCentral
     runs-on: ubuntu-latest
-    needs: [gradle_validation, detekt_validation, tests_validation]
+    needs: [ gradle_validation, detekt_validation, tests_validation ]
     env:
       SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
       SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
@@ -27,10 +28,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 17
       - name: Give gradle permission
         run: chmod +x gradlew
       - name: Prebuild library
@@ -43,23 +44,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: SebRollen/toml-action@v1.0.2
-        id: version
+      - uses: christian-draeger/read-properties@1.1.1
+        id: properties
         with:
-          file: 'gradle/libs.versions.toml'
-          field: 'versions.project-version'
-      - uses: SebRollen/toml-action@v1.0.2
-        id: name
-        with:
-          file: 'gradle/libs.versions.toml'
-          field: 'versions.project-name'
+          path: './gradle.properties'
+          properties: 'makeevrserg.project.name makeevrserg.project.version.string'
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
         with:
-          tag_name: ${{ steps.version.outputs.value }}
-          name: ${{ steps.name.outputs.value }} - ${{ steps.version.outputs.value }}
+          tag_name: ${{ steps.properties.outputs.makeevrserg-project-version-string }}
+          name: ${{ steps.properties.outputs.makeevrserg-project-name }} - ${{ steps.properties.outputs.makeevrserg-project-version-string }}
           draft: false
           prerelease: false
