--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,14 +11,14 @@ jobs:
   detekt_validation:
     needs: gradle_validation
     uses: ./.github/workflows/detekt-validation.yml
-  tests_validation:
-    needs: gradle_validation
-    uses: ./.github/workflows/tests-validation.yml
+  #tests_validation:
+  #  needs: gradle_validation
+  #  uses: ./.github/workflows/tests-validation.yml
 
   publish:
     name: Publish library at mavenCentral
     runs-on: ubuntu-latest
-    needs: [ gradle_validation, detekt_validation, tests_validation ]
+    needs: [ gradle_validation, detekt_validation ]
     env:
       SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
       SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
