--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
   publish:
     name: Publish library at mavenCentral
     runs-on: ubuntu-latest
-    needs: [ gradle_validation, detekt_validation ]
+    needs: [ gradle_validation, detekt_validation, tests_validation ]
     env:
       SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
       SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
