--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,11 +20,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ gradle_validation, detekt_validation, tests_validation ]
     env:
-      SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
-      SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
-      OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-      OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-      SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+      makeevrserg.SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
+      makeevrserg.SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
+      makeevrserg.OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+      makeevrserg.OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+      makeevrserg.SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
 
     steps:
       - uses: actions/checkout@v1
