--- a/.github/workflows/publish_prerelease.yml
+++ b/.github/workflows/publish_prerelease.yml
@@ -20,11 +20,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ gradle_validation, detekt_validation, tests_validation ]
     env:
-      "makeevrserg.SIGNING_KEY_ID": ${{ secrets.SIGNING_KEY_ID }}
-      "makeevrserg.SIGNING_PASSWORD": ${{ secrets.SIGNING_PASSWORD }}
-      "makeevrserg.OSSRH_USERNAME": ${{ secrets.OSSRH_USERNAME }}
-      "makeevrserg.OSSRH_PASSWORD": ${{ secrets.OSSRH_PASSWORD }}
-      "makeevrserg.SIGNING_KEY": ${{ secrets.SIGNING_KEY }}
+      makeevrserg_SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
+      makeevrserg_SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
+      makeevrserg_OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+      makeevrserg_OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+      makeevrserg_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
 
     steps:
       - uses: actions/checkout@v1
