--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 # Kotlin
-kotlin-version = "1.9.23" # https://github.com/JetBrains/kotlin
-kotlin-coroutines = "1.8.0" # https://github.com/Kotlin/kotlinx.coroutines
-kotlin-json = "1.6.3" # https://github.com/Kotlin/kotlinx.serialization
-kotlin-kaml = "0.58.0" # https://github.com/charleskorn/kaml
+kotlin-version = "2.0.0" # https://github.com/JetBrains/kotlin
+kotlin-coroutines = "1.8.1" # https://github.com/Kotlin/kotlinx.coroutines
+kotlin-json = "1.7.0-RC" # https://github.com/Kotlin/kotlinx.serialization
+kotlin-kaml = "0.59.0" # https://github.com/charleskorn/kaml
 kotlin-benchmark = "0.4.10" # https://github.com/Kotlin/kotlinx-benchmark
 
 # Drivers
