--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,17 +8,11 @@ on:
 jobs:
   gradle_validation:
     uses: ./.github/workflows/gradle-wrapper-validation.yml
-  detekt_validation:
-    needs: gradle_validation
-    uses: ./.github/workflows/detekt-validation.yml
-  tests_validation:
-    needs: gradle_validation
-    uses: ./.github/workflows/tests-validation.yml
 
   publish:
     name: Publish library at mavenCentral
     runs-on: ubuntu-latest
-    needs: [ gradle_validation, detekt_validation, tests_validation ]
+    needs: [ gradle_validation ]
     env:
       makeevrserg_SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
       makeevrserg_SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
