--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -7,7 +7,7 @@ updates:
     rebase-strategy: "disabled"
     groups:
       versions:
-        dependency-type: 
+        dependency-type: production
         applies-to: version-updates
     open-pull-requests-limit: 1
 
@@ -15,5 +15,9 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    groups:
+      versions:
+        dependency-type: production
+        applies-to: version-updates
     rebase-strategy: "disabled"
     open-pull-requests-limit: 1
