--- a/.github/workflows/build-project.yml
+++ b/.github/workflows/build-project.yml
@@ -8,11 +8,11 @@ jobs:
     steps:
       - name: Checkout Git repo
         uses: actions/checkout@v4
-      - name: Set up JDK 21
+      - name: Set up JDK 1.21
         uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: 21
+          distribution: 'temurin'
+          java-version: '21'
       - name: Give gradle permission
         run: chmod +x gradlew
       - name: Build with Gradle
