--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,10 +22,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 21
+      - name: Set up JDK 1.21
         uses: actions/setup-java@v4
         with:
-          java-version: 21
+          distribution: 'temurin'
+          java-version: '21'
       - name: Give gradle permission
         run: chmod +x gradlew
       - name: Prebuild library
