--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+# Gradle
+org.gradle.parallel=true
+org.gradle.configuration-cache=true
+org.gradle.caching=true
+org.gradle.jvmargs=-Xmx3G -XX:+UseParallelGC
 kotlin.code.style=official
 testTask.ignoreFailures=true
 # Java
