--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ gradle_validation ]
     env:
-      makeevrserg_SIGNING_KEY_ID: ${{ secrets.SIGNING_KEY_ID }}
-      makeevrserg_SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
-      makeevrserg_OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-      makeevrserg_OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-      makeevrserg_SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+      ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.ORG_GRADLE_PROJECT_MAVENCENTRALUSERNAME }}
+      ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.ORG_GRADLE_PROJECT_MAVENCENTRALPASSWORD }}
+      ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEY }}
+      ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYID }}
+      ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYPASSWORD }}
 
     steps:
       - uses: actions/checkout@v4
